
* Util::printHexRepresentation() off-by-one index error fixed
* FAC message type & subtypes have been added
* Now both BTP_A and BTP_B flags are set upon finding BTP in a communication profile definition

v1.1.0 (released on 13 Aug 2012)
* README.* files have been updated and version elevated to 1.1.0

v1.0.23
* OpenDocument format of configuration manual has been added
* Location Update (0x100) packet and a corresponding configuration parameter has been added
  Now both Wireless State Update and Location Update can be sent on different time intervals

v1.0.22
* Eclipse project file updated to use multiple g++ instances to build faster
* Communication profile parsing error fixed (NULL at the end is now trimmed to match std::map key)
* Communication profile off-by-one error fixed (profile item indexes were calculated as +1)
* Location Table Request is now sent by ManagementClient in its constructor
* State changes has been revised to make one more state valid
* Incoming packets are now passed to ManagementClientManager to update its state
* Util::getBinaryRepresentation() and Util::trim() methods added
* Makefile now compiles each file separately, which makes build faster for re-compilation
* Makefile parameters has been updated and README.BUILD file has been updated accordingly
* Makefile.sources file is no more used, files are found by shell command in Makefile

v1.0.21
* Location Table Request is now handled by ManagementClient
* State changes are now verified in ManagementClient

v1.0.20
* ManagementClient objects are now managed by ManagementClientManager
* ManagementClient now has InquiryThread and ManagementClientState
* Packet handler now sends replies itself
* InquiryThread is now aware of UDP connection
* Util::printHexRepresentation() is now in line with log format
* TRACE level has been added as a log level

v1.0.19
* Bugfix for string + integer concatenation using boost::lexical_cast