@@ -108,7 +108,9 @@ enum EventType {
 	 */
 	MGMT_GN_EVENT_LOCATION_UPDATE = 0x100,
 	MGMT_GN_EVENT_LOCATION_TABLE_REQUEST = 0x101,
+	MGMT_FAC_EVENT_LOCATION_TABLE_REQUEST = 0x103,
 	MGMT_GN_EVENT_LOCATION_TABLE_RESPONSE = 0x102,
+	MGMT_FAC_EVENT_LOCATION_TABLE_RESPONSE = 0x104,
 	/**
 	 * Configuration
 	 */
