@@ -42,7 +42,7 @@
 #ifndef MGMT_GN_PACKET_LOCATION_UPDATE_HPP_
 #define MGMT_GN_PACKET_LOCATION_UPDATE_HPP_
 
-#include "../mgmt_gn_datatypes.hpp"
+#include "../mgmt_types.hpp"
 #include "../util/mgmt_log.hpp"
 #include "mgmt_gn_packet.hpp"
 
